--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 zerolog - Exposes named pipes as pubsub topics
 
 This software is a proof-of-concept for a network logging daemon. It allows 
-to expose local named pipes on the system as PUB-SUB endpoints. 
+to expose local fifos on the system as PUB-SUB endpoints. 
 
 Clients can 'listen' different pipes by subscribing to relevant topics, 
 for example :
@@ -11,17 +11,15 @@ ZMQ_SUBSCRIBE, "/tmp/mydaemon.log|"
 zerolog itself takes the following options:
 
  -b Bind the socket (for example: tcp://*:5656)
- -p Pipe to listen to 
+ -p Fifo to listen to
+ -d Scan directory for fifos
 
 Both options can be specified multiple times:
 
 ./zerolog -p /tmp/test.pipe -p /tmp/daemon.log -b tcp://*:5656
 
-
-
 TODO:
 
- - Allow specifying directory and listen to all pipes in the dir
  - Files (?)
 
 
